// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quiz page tests renders body correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Body
    error={false}
    onAnswer={[MockFunction]}
    quiz={Array []}
    showLoading={true}
    showResults={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content"
      >
        <div
          className="loader center"
        >
          <h5>
            Loading questions, please wait
          </h5>
        </div>
      </div>,
      "className": "container quiz",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="loader center"
        >
          <h5>
            Loading questions, please wait
          </h5>
        </div>,
        "className": "content",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h5>
            Loading questions, please wait
          </h5>,
          "className": "loader center",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Loading questions, please wait",
          },
          "ref": null,
          "rendered": "Loading questions, please wait",
          "type": "h5",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content"
        >
          <div
            className="loader center"
          >
            <h5>
              Loading questions, please wait
            </h5>
          </div>
        </div>,
        "className": "container quiz",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="loader center"
          >
            <h5>
              Loading questions, please wait
            </h5>
          </div>,
          "className": "content",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h5>
              Loading questions, please wait
            </h5>,
            "className": "loader center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Loading questions, please wait",
            },
            "ref": null,
            "rendered": "Loading questions, please wait",
            "type": "h5",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`quiz page tests renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Quiz
    dispatch={[MockFunction]}
    goTo={[MockFunction]}
    quiz={
      Object {
        "results": Array [],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "error": false,
      "onAnswer": [Function],
      "quiz": Array [],
      "showLoading": true,
      "showResults": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "error": false,
        "onAnswer": [Function],
        "quiz": Array [],
        "showLoading": true,
        "showResults": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`quiz page tests renders quiz card correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <QuizCard
    item={
      Object {
        "category": "Entertainment: Video Games",
        "correct_answer": "True",
        "difficulty": "hard",
        "incorrect_answers": Array [
          "False",
        ],
        "question": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
        "type": "boolean",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="header"
        >
          <p>
            Entertainment: Video Games
          </p>
        </div>,
        <div
          className="body"
        >
          <p
            className="question"
            dangerouslySetInnerHTML={
              Object {
                "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
              }
            }
          />
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <p>
            Entertainment: Video Games
          </p>,
          "className": "header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Entertainment: Video Games",
          },
          "ref": null,
          "rendered": "Entertainment: Video Games",
          "type": "p",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <p
            className="question"
            dangerouslySetInnerHTML={
              Object {
                "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
              }
            }
          />,
          "className": "body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "question",
            "dangerouslySetInnerHTML": Object {
              "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="header"
          >
            <p>
              Entertainment: Video Games
            </p>
          </div>,
          <div
            className="body"
          >
            <p
              className="question"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
                }
              }
            />
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p>
              Entertainment: Video Games
            </p>,
            "className": "header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Entertainment: Video Games",
            },
            "ref": null,
            "rendered": "Entertainment: Video Games",
            "type": "p",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p
              className="question"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
                }
              }
            />,
            "className": "body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "question",
              "dangerouslySetInnerHTML": Object {
                "__html": "In &quot;The Sims&quot; series, the most members in a household you can have is 8.",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
